envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8082
layered_runtime:
  layers:
    - name: admin
      admin_layer: {}
    - name: static-layer
      static_layer:
        envoy.reloadable_features.allow_multiple_dns_addresses: true
        envoy.reloadable_features.conn_pool_new_stream_with_early_data_and_http3: true
        envoy.reloadable_features.http1_use_balsa_parser: true
        envoy.reloadable_features.http2_use_oghttp2: true
        envoy.reloadable_features.http3_sends_early_data: true
        envoy.reloadable_features.postpone_h3_client_connect_to_next_loop: true
        envoy.resource_limits.listener.proxy.connection_limit: 1000
        overload.global_downstream_max_connections: 1000
        config: "default"
static_resources:
  clusters:
    - name: dynamic_forward_proxy_cluster
      connect_timeout: 2s
      dns_lookup_family: ALL
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          allow_coalesced_connections: true
          dns_cache_config:
            name: dynamic_forward_proxy_cache_config
            dns_lookup_family: ALL
  listeners:
    - name: dynamic_forward_proxy_upgrade
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: |
                              { "bucket": [{"endpoint": "s3.us-west-2.amazonaws.com", "name": "amzn-s3-demo-bucket1"}] }
                          vm_config:
                            vm_id: "vm"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "main.wasm"
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: dynamic_forward_proxy_cache_config
                        dns_lookup_family: ALL
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                http2_protocol_options:
                  allow_connect: true
                http3_protocol_options:
                  allow_extended_connect: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: dynamic_forward_proxy_cluster
                        - match:
                            connect_matcher: {}
                          route:
                            cluster: dynamic_forward_proxy_cluster
                            upgrade_configs:
                              - upgrade_type: CONNECT
                                connect_config: {}
                stat_prefix: dynamic_forward_proxy_upgrade
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      traffic_direction: OUTBOUND
